add reconnect to rabbit publisher and implement outbox patter to publish auth events
